--- a/index.html
+++ b/index.html
@@ -4,12 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Document</title>
+    <title>JavaScript</title>
+    
 </head>
 <body>
-    
+    <main>
+        <p> <label> Nome: </label> <input type="text" id="box-nome"> </p>
+        <p> <label>Idade: </label> <input type="number" id="box-idade"> </p>
+        <p>
+            <label> Sexo: </label> 
+            <select id="box-sexo">
+                <option value="masculino">Masculino</option>
+                <option value="feminino">Feminino</option>
+                <option value="x">X</option>
+            </select>
+        </p>
+        <p> <button onclick="cadastro()"> Salvar </button> </p>
 
+    </main>
     <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/cadastro.js"></script>
 </body>
 </html>
